2009-06-19  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/driver-pluto.c: Workaround to keep working when
	there is a compilation error with the native compiler (skip
	program execution).

2009-06-19  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	Commit the 06/12/2009 bump to 1.0-beta, and some minor updates.

	* driver/pocc/Makefile.am,
	* driver/pocc/driver-pluto.c,
	* driver/src/Makefile.am,
	* driver/src/options.c,
	* README,
	* configure.ac,
	* doc/pocc.texi: Minor updates.

2009-05-13  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/driver-letsee.c,
	* driver/pocc/driver-cloog.c,
	* driver/src/options.c: Minor updates. Force maxfuse when in
	precut mode.

2009-05-04  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch adds polyfeat, the polyhedral feature extractor, in the
	set of required modules.

	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/stable/driver.cfg,
	* config/irregular/configure.cfg,
	* config/irregular/driver.cfg: Add systematic compilation and
	support of polyfeat.

2009-05-03  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/driver-letsee.c,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c,
	* doc/pocc.texi: Provide option --letsee-bounds, and update
	documentation accordingly.

2009-05-03  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc-utils/include/pocc-utils/options.h,
	* driver/pocc-utils/options.c,
	* driver/pocc/include/pocc/driver-letsee.h,
	* driver/pocc/driver-letsee.c,
	* driver/pocc/driver-codegen.c: Enable schedule mode for LetSee.

2009-05-03  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch mainly enables the support of ScopLib

	* driver/pocc/include/pocc/driver-candl.h,
	* driver/pocc/include/pocc/driver-letsee.h,